corpus/each.txt
================================================================================
8-button EACH (no separator)
================================================================================

&inote_1=(120){4}12345678,

--------------------------------------------------------------------------------

(chart_file
  (chart
    (chart_key)
    (integer)
    (bpm
      (number))
    (divisor
      (number))
    (tap
      (button_position))
    (tap
      (button_position))
    (tap
      (button_position))
    (tap
      (button_position))
    (tap
      (button_position))
    (tap
      (button_position))
    (tap
      (button_position))
    (tap
      (button_position))
    (tick)))

================================================================================
8-button EACH (each separator)
================================================================================

&inote_1=(120){4}1/2/3/4/5/6/7/8,

--------------------------------------------------------------------------------

(chart_file
  (chart
    (chart_key)
    (integer)
    (bpm
      (number))
    (divisor
      (number))
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (tick)))

================================================================================
8-button EACH (pesudo each separator)
================================================================================

&inote_1=(120){4}1`2`3`4`5`6`7`8,

--------------------------------------------------------------------------------

(chart_file
  (chart
    (chart_key)
    (integer)
    (bpm
      (number))
    (divisor
      (number))
    (tap
      (button_position))
    (pseudo_each)
    (tap
      (button_position))
    (pseudo_each)
    (tap
      (button_position))
    (pseudo_each)
    (tap
      (button_position))
    (pseudo_each)
    (tap
      (button_position))
    (pseudo_each)
    (tap
      (button_position))
    (pseudo_each)
    (tap
      (button_position))
    (pseudo_each)
    (tap
      (button_position))
    (tick)))
