corpus/gimmick.txt
================================================================================
☆TAP gimmicks
================================================================================

&inote_1=(170){4}2?-4[8:1],

--------------------------------------------------------------------------------

(chart_file
  (chart
    (chart_key)
    (integer)
    (bpm
      (number))
    (divisor
      (number))
    (slide
      (button_position)
      (star_tap_modifiers)
      (slide_variant)
      (button_position)
      (duration
        (first_number
          (number))
        (colon
          (number))))
    (tick)))

================================================================================
0th button
================================================================================

&inote_1=(170){4}0/2,

--------------------------------------------------------------------------------

(chart_file
  (chart
    (chart_key)
    (integer)
    (bpm
      (number))
    (divisor
      (number))
    (tap
      (button_position))
    (each)
    (tap
      (button_position))
    (tick)))
